--- a/index.html
+++ b/index.html
@@ -60,15 +60,23 @@
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="вид на озеро Байкал 2">
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="вид из горный хребет">
       </section> <!-- End section grid-photo -->
+
+      <section class="cover">
+        <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе &nbsp;&mdash; путешествие от столицы до Байкала на
+            электричках.</p>
+        </a>
+      </section> <!-- End section cover -->
     </main>
     <footer class="footer">
       <nav>
         <ul class="footer__items">
-          <li class="footer__link">Карты</li>
-          <li class="footer__link">Погода</li>
-          <li class="footer__link">Расписание</li>
-          <li class="footer__link">Календарь</li>
-          <li class="footer__link">Путешествия</li>
+          <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+          <li class="footer__item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+          <li class="footer__item"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+          <li class="footer__item"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a</li>
+          <li class="footer__item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
         </ul>
       </nav>
       <p class="footer__copyright">&copy; 2022. Ткач Олег</p>
