commit finish version 22-04-08

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           некоторые интересные места, достойные вашего отпуска.
         </p>
         <ul class="intro__list">
-          <li>Часовых поясов 11</li>
+          <li>Часовых поясов <span class="intro__list_font-weight_normal">11</span></li>
           <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_font-weight_normal">12</span></li>
           <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_font-weight_normal">16</span></li>
           <li>Природных заповедников <span class="intro__list_font-weight_normal">105</span></li>
