commit finish version corected body-page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-  <div class="page">
+<body class="page">
 
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="логотип карта России">
@@ -187,6 +186,6 @@
       </nav>
       <p class="footer__copyright">&copy; 2022. Ткач Олег</p>
     </footer>
-  </div>
+
 </body>
 </html>
