second rewiev- cerrected scrolling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="логотип карта России">
-      <a class="header__lang-link" href="#" target="_blank">En</a>
-      <a class="header__lang-link" href="#" target="_blank">Ru</a>
+      <a class="header__lang-link" href="#">En</a>
+      <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
     </header>
 
     <main class="content">
@@ -25,27 +25,31 @@
           <img class="lead__image" src="./images/lead-polka.jpg" alt="Окно и полка вагона">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
-      </section>  <!-- End section lead -->
+      </section>
+       <!-- End section lead -->
 
       <section class="intro" aria-label="Секция c информацией">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
-          планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
-          Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато
-          Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых
-          перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
-          усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали
-          некоторые интересные места, достойные вашего отпуска.
-        </p>
-        <ul class="intro__list">
-          <li><span class="intro__span-accent">Часовых поясов</span> 11</li>
-          <li><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
-          <li><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-          <li><span class="intro__span-accent">Природных заповедников</span> 105</li>
-          <li><span class="intro__span-accent">Аэропортов</span> 241</li>
-        </ul>
-      </section> <!-- End section intro -->
+        <article class="intro__article">
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <p class="intro__text">
+            По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+            планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
+            Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато
+            Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых
+            перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+            усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали
+            некоторые интересные места, достойные вашего отпуска.
+          </p>
+          <ul class="intro__list">
+            <li><span class="intro__span-accent">Часовых поясов</span> 11</li>
+            <li><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
+            <li><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+            <li><span class="intro__span-accent">Природных заповедников</span> 105</li>
+            <li><span class="intro__span-accent">Аэропортов</span> 241</li>
+          </ul>
+        </article>
+      </section>
+      <!-- End section intro -->
 
       <section class="photo-grid">
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="вид из окна поезда на озеро">
@@ -60,7 +64,8 @@
         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="вид из гору Камчатки 2">
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="вид на озеро Байкал 2">
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="вид из горный хребет">
-      </section> <!-- End section grid-photo -->
+      </section>
+      <!-- End section grid-photo -->
 
       <section class="places">
         <article class="place">
@@ -165,14 +170,16 @@
             </p>
           </div>
         </article>
-      </section> <!-- End section places -->
+      </section>
+      <!-- End section places -->
 
       <section class="cover">
         <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
-      </section> <!-- End section cover -->
+      </section>
+      <!-- End section cover -->
     </main>
     <footer class="footer">
       <nav>
